--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/jgs.jpeg" type="image/x-icon">
   <meta name="description" content="Jayamalikka Glass Solutions provides premium window glass services in Chennai, India, delivering a wide range of high-quality solutions.">
 
-  <title>Jayamalikka Glass Solution</title>
+  <title>Jayamalikka Glass Solutions</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -2413,11 +2413,10 @@
                 <strong>Contact Us</strong>
             </h5>
             <ul class="list mbr-fonts-style display-7">
-              <li class="mbr-text item-wrap">Phone: <a href="tel:+91 9876543210" class="text-black">+91 9876543210</a></li>
-              <li class="mbr-text item-wrap">WhatsApp: <a href="tel:+91 9876543210" class="text-black">+91 9876543210</a></li>
-              <li class="mbr-text item-wrap">Email: <a href="mailto:info@jayamalikka.com" class="text-black">info@jayamalikka.com</a></li>
-              <li class="mbr-text item-wrap">Address: 123 Glass Street, Chennai, India</li>
-              <li class="mbr-text item-wrap">Working Hours: Mon - Fri: 9am - 6pm</li>
+              <li class="mbr-text item-wrap">Phone: <a href="tel:+91 9952948480" class="text-black">+91 9952948480</a></li>
+              <li class="mbr-text item-wrap">WhatsApp: <a href="tel:+91 9952948480" class="text-black">+91 9952948480</a></li>
+              <li class="mbr-text item-wrap">Email: <a href="mailto:jayamalikka@gmail.com" class="text-black">jayamalikka@gmail.com</a></li>
+              <li class="mbr-text item-wrap">Address: 14/17, Krishnappa street, West Saidapet, Chenna, India</li>
             </ul>
 					</div>
 				</div>
